k8s-common/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: togglemaster-ingress
  namespace: togglemaster
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /ngos(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: ngo-service
            port:
              number: 80

      - path: /donations(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: donation-service
            port:
              number: 80

      - path: /volunteers(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: volunteer-service
            port:
              number: 80
